<resources>
    <string name="app_name">TiengAnhChoBe</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="alphabet"></string>
    <string name="quest">Câu hỏi 1</string>
    <string name="btnAnswer">Answer</string>
    <string name="animal">Just to hear the continental part in the kitchen, lying in a circle on a chair, her cat quickly jumped up like a spring, ran into the kitchen. The mice rushed down, ran the dead seller directly towards the pool. As fast as lightning, she shrugged her shoulders gently, hitting a straight line running the mouse. Just turn your back, then press the Control button behind the whole body to take care of the mouse. One leg, she took the throat blocked, the other leg of bad breath evil eye, nose, cheeks sharp claws. Only about thirty seconds later, seeing the eyes stick out the rat.</string>
    <string name="flower">Grandmother is house at the top of the village, next to the lotus pond more than three acres. In March, the lake surface is covered with a blue color of the lotus leaf. There are leaves floating on the water, with leaves as high as the green leaf, the stem has many thorns. In early April, lotus blossoms. Pink lotus and white lotus bloom as large as the bowl, full of yellow flowers as well. Walking through the lotus pond, I felt lively, the bag like lotus lot to class.</string>
    <string name="school">I often call Nhac Trach Primary School my second home. Spacious grounds, around the Poinciana tree and ancient eagle butterfly cover, with flower beds and green lawns. Listed under the rock for reading and talking after each lesson. The full class of tables and chairs, study cabinets and also showcase the post office, nicearticle. In addition, you have other classes such as music room, computer science, library, English class ... I love my second home!</string>
    <string name="fruit">I like to eat a lot of fruits but I like the mango most. The young mango fruit is green, while the yellow color is dark. On the outside, the mango is a stout hand, thick in the middle and tapering to the sides. Whenever my mother mango, I would love to see two yellow mango cheeks. The very large seed that is in the center makes up about a fifth of the mango tree is mass. It is a dessert that is nutritious and delicious.</string>
    <string name="house">This is my house. My house has 7 rooms as living room, my parents are the bedroom, my room, the kitchen, the dining room, the bathroom and the toilet. In the living room, you will see the altar Firstly. It is located at a high elevation. In the middle of the room, the table and chairs are located here with chairs and tables (no sofa, no armchair). We have some pictures on the wall above. TVs are located behind tables and chairs. In my room, the computer is located next to the table and the bookshelf is located next to the desk. On the left, the bed is placed near the wardrobe. In the kitchen, the cabinets are placed near the fridge, stove and rice.</string>
    <string name="national">Someone once asked me: "If you have a lot of money, what would you do?". My answer is that I will travel around the world. Especially where I want to be American. The United States renowned for the most modern cities such as New York, Los angeles, ... and I want to be once you arrive here.  Another reason that makes me want to visit the United States by the cinematic appeal of this place. The films produced by Hollywood, especially action films really attracted me.
It is possible with the current conditions, the U.S.A is a step too far for me to make sure I will later visited America. America the beautiful country wait for me okay...</string>
    <string name="introduction1"> Learning Kids là phần mềm dành cho trẻ em từ 2 đến 5 tuổi trở lên. </string>
    <string name="intro2">Phần mềm gồm có 4 chức năng.</string>
    <string name="intro3">Thứ nhất là: Bài học: gồm có 8 phần(Bảng chữ, Bảng số, Động vật, Màu sắc, Trường học, Quốc gia, Hoa, Quả).</string>
    <string name="intro4">Thứ hai là: Kiểm tra: gồm có 8 bài, mỗi bài gồm 10 câu hỏi</string>
    <string name="intro5">Thứ ba là: Giải trí: Load video từ youtobe</string>
    <string name="intro6">Thứ tư là: Luyện nghe: Gồm 7 bài nghe</string>
    <string name="intro7">Giúp cho trẻ em tăng khả năng tự hoc tiếng anh.</string>

</resources>

